# games-scouting

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: daily-snapshot.yml  dry-run.yml  weekly-report.yml
config/: countries.yaml  genres.yaml  signals.yaml
data/: scouting.sqlite
docs/: index.html
docs/2026-04-20/: index.html  totals.json
docs/2026-04-27/: index.html  totals.json
docs/superpowers/: PROGRESS.md
docs/superpowers/plans/: 2026-04-16-games-scouting-agent.md
docs/superpowers/specs/: 2026-04-16-games-scouting-agent-design.md
scripts/: fetch_play_chart.mjs
src/: config.py  genre_filter.py  logging_setup.py
src/jobs/: daily.py  weekly.py
src/report/: render.py  slack.py
src/report/templates/: _card.html.j2  archive.html.j2  base.html.j2  weekly.html.j2
src/scrape/: app_store.py  play_store.py
src/signals/: compose.py  cross_platform.py  enrich.py  fast_climber.py  new_entrant.py  sustained.py
src/store/: db.py  schema.sql
tests/: conftest.py  test_app_store_scraper.py  test_compose.py  test_config.py  test_cross_platform.py  test_db.py  test_enrich.py  test_fast_climber.py  test_genre_filter.py  test_jobs_daily.py  test_jobs_weekly.py  test_new_entrant.py  test_play_store_scraper.py  test_render.py  test_scrape_smoke.py  test_slack.py  test_sustained.py
tests/fixtures/cassettes/: ios_metadata_sample.yaml  ios_top_free_us.yaml
