[project]
name = "games-scouting-agent"
version = "0.1.0"
description = "Weekly scouting report for rising mobile games in casual/mass-market genres"
requires-python = ">=3.12"
dependencies = [
    "google-play-scraper>=1.2.7",
    "requests>=2.32.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "slack-sdk>=3.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "vcrpy>=6.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
